syntax = "proto3";
package temporal.compounder;

import "gogoproto/gogo.proto";

option go_package = "github.com/temporal-zone/temporal/x/compounder/types";

message ValidatorSetting {
  
  string validatorAddress = 1; 
  string percentToCompound = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}
