syntax = "proto3";
package temporal.icayieldmos;

option go_package = "github.com/temporal-zone/temporal/x/icayieldmos/types";

message RemoteContractCompoundSettings {
  uint64 id = 1;
  uint64 contractRemoteZone = 2;
  string remoteDelegatorAddress = 3; 
  string compoundSettings = 4;
  uint64 frequencyInSeconds = 5;
  string remoteContractAddress = 6; 
  string creator = 7;
}
